--- a/src/components/Matrix/index.css
+++ b/src/components/Matrix/index.css
@@ -8,18 +8,47 @@
 input {
     background-color: #fff;
     height: 30px;
+    width: 100%;
     color: black;
     text-align: center;
-    font-size: large;
+    border: none;
+}
+
+.read-only {
+    background-color: #fff;
+    height: 30px;
+    width: 178px;
+}
+
+.table-header {
+    background-color: transparent;
+    color:black;
+    /* font-size: large; */
+    font-size: 17px;
+    text-align: center;
+    border: none;
+    resize: horizontal;
+    height: 30px;
+    width: 178px;
 }
 
 table {
     width: 100%;
-    text-align: center;
 }
 
-table,th,td {
-    border: 2px solid rgb(24, 14, 14);
+table,
+th,
+td {
+    border: 1px solid rgb(170, 170, 170);
     /* border-collapse: collapse; */
+}
 
+thead {
+    position: sticky;
+    position: -webkit-sticky;
+    top: 0;
+    /* required */
+}
+th{
+    background-color: silver;
 }
